<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="25px"
    android:minHeight="25px">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:text="Survey 1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title" />
            <TextView
                android:text="On average, to what extent were your feelings positive/negative today?"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_alignParentLeft="true"
                android:id="@+id/textView_Q1" />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_Q1"
                android:id="@+id/seekBar1_Q1" />
            <TextView
                android:text="neutral"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar1_Q1"
                android:layout_alignParentLeft="true"
                android:id="@+id/neutral" />
            <TextView
                android:text="positive"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar1_Q1"
                android:layout_alignParentRight="true"
                android:id="@+id/positive" />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/positive"
                android:id="@+id/seekBar2_Q1" />
            <TextView
                android:text="neutral"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar2_Q1"
                android:layout_alignParentLeft="true"
                android:id="@+id/neutral1" />
            <TextView
                android:text="negative"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar2_Q1"
                android:layout_alignParentRight="true"
                android:id="@+id/negative" />
            <TextView
                android:text="What activity are you doing? Select the option(s) that best match your activity, or enter your answers in the space provided for optional input."
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/negative"
                android:id="@+id/textView_Q2" />
            <Spinner
                android:id="@+id/Q2_ActivitySpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_Q2"
                android:prompt="@string/Q2_ActivityPrompt" />
            <TextView
                android:text="If other, please specify the activity"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q2_ActivitySpinner"
                android:id="@+id/Q2_activity" />
            <EditText
                android:inputType="textMultiLine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q2_activity"
                android:id="@+id/Q2_ActivityOther"
                android:imeOptions="actionDone" />
            <TextView
                android:text="Please describe any companion for the activity."
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q2_ActivityOther"
                android:id="@+id/Q2_CompanionQuestion" />
            <Spinner
                android:id="@+id/Q2_CompanionSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q2_CompanionQuestion"
                android:prompt="@string/Q2_CompanionPrompt" />
            <TextView
                android:text="If other, please specify the companion"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q2_CompanionSpinner"
                android:id="@+id/Q2_companion" />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q2_companion"
                android:id="@+id/Q2_CompanionOther"
                android:imeOptions="actionDone" />
            <TextView
                android:text="Would you prefer to be interacting with more/fewer people right now?"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q2_CompanionOther"
                android:id="@+id/Q3_Question" />
            <Spinner
                android:id="@+id/Q3_Spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q3_Question"
                android:prompt="@string/Q3_Prompt" />
            <TextView
                android:text="How much personal space would you prefer to have right now?"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q3_Spinner"
                android:id="@+id/Q4_Question" />
            <Spinner
                android:id="@+id/Q4_Spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q4_Question"
                android:prompt="@string/Q3_Prompt" />
            <TextView
                android:text="Tell us a little about what your current thoughts are:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q4_Spinner"
                android:id="@+id/Q5_Question" />
            <TextView
                android:text="To what extent are your thoughts positive/negative? "
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_Question"
                android:id="@+id/Q5_Question1" />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_Question1"
                android:id="@+id/seekBar1_Q5" />
            <TextView
                android:text="neutral"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar1_Q5"
                android:layout_alignParentLeft="true"
                android:id="@+id/Q5_neutral" />
            <TextView
                android:text="positive"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar1_Q5"
                android:layout_alignParentRight="true"
                android:id="@+id/Q5_positive" />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_positive"
                android:id="@+id/seekBar2_Q5" />
            <TextView
                android:text="neutral"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar2_Q5"
                android:layout_alignParentLeft="true"
                android:id="@+id/Q5_neutral1" />
            <TextView
                android:text="negative"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar2_Q5"
                android:layout_alignParentRight="true"
                android:id="@+id/Q5_negative" />
            <TextView
                android:text="To what extent are your thoughts focused on the activity (e.g., the task you’re doing) and/or interactions you are doing at the time of the prompt?"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_negative"
                android:id="@+id/Q5_Question2" />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_Question2"
                android:id="@+id/seekBar3_Q5" />
            <TextView
                android:text="Completely distracted"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar3_Q5"
                android:layout_alignParentLeft="true"
                android:id="@+id/Q5_distracted" />
            <TextView
                android:text="Completely focused"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar3_Q5"
                android:layout_alignParentRight="true"
                android:id="@+id/Q5_focused" />
            <TextView
                android:text="If not alone, to what extent are your thoughts focused on evaluation of your performance in the activity you are doing at the time of the prompt?"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_focused"
                android:id="@+id/Q5_Question3" />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_Question3"
                android:id="@+id/seekBar4_Q5" />
            <TextView
                android:text="Not at all"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar4_Q5"
                android:layout_alignParentLeft="true"
                android:id="@+id/Q5_NAA" />
            <TextView
                android:text="A lot"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar4_Q5"
                android:layout_alignParentRight="true"
                android:id="@+id/Q5_AL" />
            <TextView
                android:text="Are your thoughts pertaining to the present (here and now) past, and/or future events?"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_AL"
                android:id="@+id/Q5_Question4" />
            <Spinner
                android:id="@+id/Q5_Spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_Question4"
                android:prompt="@string/Q5_Prompt" />
            <Button
                android:text="Submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5_Spinner"
                android:id="@+id/submit" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>